population-generator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: population-generator
  namespace: agricore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: population-generator
  template:
    metadata:
      labels:
        app: population-generator
    spec:
      containers:
        - name: population-generator
          image: # TO_MODIFY: Replace with the correct image path
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
          command: ["start-notebook.sh","--NotebookApp.token=agricore"]
          volumeMounts:
            - name: population-generator-vol
              mountPath: /home/jovyan/
      imagePullSecrets:
        - name: # TO_MODIFY: Replace with the correct image pull secret
      volumes:
        - name: population-generator-vol
          persistentVolumeClaim:
            claimName: population-generator-pvc
