population-generator/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: population-generator-svc
  namespace: agricore
spec:
  selector:
    app: population-generator
  ports:
    - port: 80
      targetPort: 8888
      protocol: TCP
      name: http 
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: population-generator-ingress
  namespace: agricore
spec:
  entryPoints:
    - websecure
  routes:
    - match: # TO_MODIFY: Replace with the host rule (e.g., Host(<host-name>))
      kind: Rule
      services:
        - name: population-generator-svc
          port: 80
  tls:
    secretName: tls-population-generator
